added stories object and admin pages

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -8,7 +8,7 @@
     <%= yield %>
     <hr>
     <p>
-      <%=t 'shared.common.jumpstart.slogan' %>
+      <%=t 'shared.common.forset.slogan' %>
     </p>
   </body>
 </html>
