--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class='app-footer'>
   <p class='app-footer-left'>&copy; <%= Time.now.year %></p>
-  <%= link_to image_tag('jumpstart-logo.png', class: 'app-footer-right'),
-              'http://jumpstart.ge',
+  <%= link_to image_tag('forset-logo.png', class: 'app-footer-right'),
+              'https://forset.ge',
               target: '_blank',
-              title: t('shared.common.jumpstart.slogan') %>
+              title: t('shared.common.forset.slogan') %>
 </footer>
