--- a/app/views/root/story_show.html.erb
+++ b/app/views/root/story_show.html.erb
@@ -1,3 +1,3 @@
 <% page_title @story.title %>
 
-<%= render partial: 'shared/story_show' %>
+<%= render partial: 'shared/story_show', locals: {show_pubic_links: true} %>
