--- a/app/views/root/story_show.html.erb
+++ b/app/views/root/story_show.html.erb
@@ -1,3 +1,7 @@
-<% page_title @story.title %>
+<%
+  page_title @story.title
+  meta_description strip_tags(@story.content)
+  meta_image @story.image_share.url
+%>
 
 <%= render partial: 'shared/story_show', locals: {show_pubic_links: true} %>
