--- a/app/views/admin/stories/show.html.erb
+++ b/app/views/admin/stories/show.html.erb
@@ -1,7 +1,7 @@
 <%
-page_title t('.title',
-             label: t('activerecord.attributes.story.title'),
-             label_value: @story.title)
+page_title t('shared.common.show_title',
+             model: t('activerecord.models.story', count: 1),
+             title: @story.title)
 %>
 
 <div class='actions-container'>
