--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -4,6 +4,7 @@ upstream puma_<%= application %> {
 
 server {
   listen 80;
+  listen [::]:80;
 
   server_name <%= web_url %> www.<%= web_url %>;
   root <%= full_current_path %>/public;
@@ -113,5 +114,12 @@ server {
 
   location ~ \.(php|html)$ {
     return 405;
+  }
+
+  ##############################################################
+  # the following is to allow certbots/letsencrypt access to certs
+  ##############################################################
+  location ~ /.well-known {
+    allow all;
   }
 }
