--- a/app/views/root/about.html.erb
+++ b/app/views/root/about.html.erb
@@ -1,3 +1,3 @@
 <% page_title @about.title %>
 
-<%= simple_format_no_tags @about.content %>
+<%= simple_format_no_tags @about.content, {}, sanitize: false %>
