--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,25 +12,337 @@ URL: https://gist.github.com/bobbygrace/9e961e8982f42eb91b80
 
 @charset 'UTF-8';
 
-@import 'jquery-ui/core';
+// @import 'jquery-ui/core';
 
-@import 'variables';
-@import 'media-queries';
-@import 'bootstrap_and_overrides';
-@import 'formtastic_overrides';
+// @import 'variables';
+// @import 'media-queries';
+// @import 'bootstrap_and_overrides';
+// @import 'formtastic_overrides';
 
 // Font awesome icons
-@import 'font-awesome-sprockets';
-@import 'font-awesome';
+// @import 'font-awesome-sprockets';
+// @import 'font-awesome';
 
 // Components
-@import 'components/actions';
-@import 'components/app-footer';
-@import 'components/language_switcher';
-@import 'components/loading_indicator';
-@import 'components/primary_header';
-@import 'components/translated_inputs';
+// @import 'components/actions';
+// @import 'components/app-footer';
+// @import 'components/language_switcher';
+// @import 'components/loading_indicator';
+// @import 'components/primary_header';
+// @import 'components/translated_inputs';
 
+@import 'reset';
+@import 'components/fonts';
+
+body, html {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+}
+body {
+  background-color: #f5e7d2;
+}
+*::-webkit-scrollbar-track {
+  background-color: #f5e7d2;
+}
+*::-webkit-scrollbar {
+  height: 8px;
+  width:8px;
+}
+*::-webkit-scrollbar-thumb {
+  background-color: #bfbfbf;
+  border: 2px solid #f5e7d2;
+}
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #b1b1b1;
+  border: 2px solid #f5e7d2;
+  cursor: pointer;
+}
+a { text-decoration: none; }
+nav {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  padding: 20px 0 20px;
+  .nav-logo-wrapper {
+    position: relative;
+    padding-left: 30px;
+    margin-top: 20px;
+    .nav-logo {}
+    .nav-about {
+      position: absolute;
+      top: 4px;
+      right: 23px;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      a {
+        font: 22px rawengulk_b;
+        color: #cc983b;
+        vertical-align: top;
+      }
+      .nav-separator {
+        display: inline-block;
+        height: 40px;
+        width: 1px;
+        background-color: #cd9732;
+        margin-right: 10px;
+        vertical-align: top;
+      }
+    }
+  }
+  .nav-slogan {
+    flex: 1;
+    align-self: flex-end;
+    padding: 0 40px 15px;
+    font: 16px rawengulk_b;
+    color: #613f20;
+
+  }
+  .nav-menu {
+    padding: 0 30px;
+    li {
+      display: inline-block;
+      a {
+        font: 14px playfair_display_r;
+        color: #cd9732;
+        &.active {
+          font: 14px playfair_display_b;
+        }
+      }
+    }
+    .nag-lang-separator {
+      font: 14px playfair_display_r;
+      color: #cd9732;
+    }
+  }
+  .nav-social-wrapper {
+    position: relative;
+  }
+  .nav-social {
+    li {
+      a {
+        border-top-left-radius: 8px;
+        border-bottom-left-radius: 8px;
+        width: 41px;
+        margin-bottom: 4px;
+        display: inline-block;
+        text-align: center;
+        padding: 6px 0 4px;
+      }
+      &.facebook a {
+        background-color: #eb4848;
+      }
+      &.twitter a {
+        background-color: #cd9732;
+      }
+      &.linkedin a {
+        background-color: #a0934f;
+      }
+    }
+
+  }
+}
+main {
+  padding: 0 30px;
+  .container {
+    overflow-x: auto;
+    overflow-y: hidden;
+  }
+  .grid {
+    // overflow-x: auto;
+    list-style: none;
+    width: 1390px;
+    margin: 0 auto;
+    font-size: 0;
+    li {
+      display: inline-block;
+      vertical-align: bottom;
+      margin-right: 10px;
+      font-size: 18px;
+      &.vt { // vertical align top
+        margin-top: 10px;
+        vertical-align: top;
+      }
+      &.wm { // without margin
+        margin-right: 0;
+      }
+      .story-container {
+        position: relative;
+        cursor: pointer;
+      }
+      .story-poster {
+        img {
+          min-width: 100%;
+          vertical-align: top;
+        }
+      }
+      .story-info {
+        display: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        // background-color: rgba(33,33,33,.8);
+        .story-title {
+
+        }
+        .story-author {
+
+        }
+        .story-notice {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate( -50%, -50%);
+          // padding: 30px 20px 20px;
+          width: 100px;
+          height: 100px;
+          // min-width: 100px;
+          // min-height: 100px;
+          // height: 80px;
+          border-radius: 100%;
+          background-color: #4571b1;
+          border: 8px solid #f5ce20;
+          // position: relative;
+
+          // margin: 1em auto;
+          // border-radius: 50%;
+          // background: #a7cd80;
+          .story-soon {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate( -50%, -50%);
+            font: 14px rawengulk_b;
+            color: #f3ede4;
+            text-align: center;
+          }
+          .story-title {
+            display: none;
+          }
+        }
+      }
+      .story-container.about-eurasianet {
+            // .story-link {
+            //   font: 22px rawengulk_b;
+            //   color: #fff;
+            //   background-color: rgba(235, 72, 72, .9);
+            //   img {}
+            // }
+        .story-info {
+          display: block;
+          .story-link {
+            font: 22px rawengulk_b;
+            color: #fff;
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            background-color: rgba(245, 206, 32, 0.6);
+            height: 100%;
+            justify-content: center;
+            img {
+              opacity: 0;
+              padding: 15px 0 20px;
+              margin: 0 auto;
+            }
+          }
+        }
+      }
+      &:not(.cs) .story-container:hover {
+         .story-info {
+          display: block;
+          .story-link {
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            background-color: rgba(235, 72, 72, .9);
+            height: 100%;
+          }
+          .story-title {
+            font: 20px rawengulk_r;
+            color: #f0e8d8;
+            padding: 30px 15px 0;
+            flex: 1;
+          }
+          .story-author {
+            font: 12px playfair_display_r;
+            color: #f9ce08;
+            padding: 0 30px 15px;
+            span {
+              font: 14px playfair_display_r;
+
+            }
+          }
+        }
+        &.about-eurasianet {
+          .story-link {
+            background-color: #4571b1;
+            img {
+              opacity: 1;
+            }
+          }
+        }
+      }
+      &.cs {
+        .story-info {
+          display: block;
+        }
+        .story-container:hover {
+          .story-info {
+            background-color: rgba(245, 206, 32, 0.6);
+          }
+          .story-notice {
+            width: 154px;
+            height: 154px;
+          }
+          .story-soon {
+            display: none;
+          }
+          .story-title {
+            display: block;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate( -50%, -50%);
+            font: 18px rawengulk_r;
+            color: #f3ede4;
+            text-align: center;
+            width: 80%;
+          }
+        }
+      }
+
+      // .story-container:hover .coming-soon .info-circle {
+      //   .story-soon { display: none; }
+      //   .title { display: block; }
+      // }
+    }
+  }
+}
+footer {
+  padding: 0 20px 10px;
+  text-align: right;
+  a {
+    display: inline-block;
+    font-size: 0;
+    vertical-align: top;
+    padding-top: 10px;
+  }
+  .separator {
+    display: inline-block;
+    height: 40px;
+    width: 1px;
+    background-color: #000;
+    opacity: .2;
+    margin: 0 20px;
+    vertical-align: top;
+  }
+}
 .actions-container {
   background-color: #f9f9f9;
   padding: 10px;
