Sttory page started

--- a/app/assets/stylesheets/bootstrap_and_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.scss
@@ -52,9 +52,9 @@
 @import 'bootstrap/popovers';
 @import 'bootstrap/carousel';
 
-// Utility classes
+// // Utility classes
 @import 'bootstrap/utilities';
 @import 'bootstrap/responsive-utilities';
 
-// Make gray-light a bit lighter
+// // Make gray-light a bit lighter
 $gray-light: lighten($gray-base, 70%);
