--- a/app/assets/stylesheets/components/fonts.scss.erb
+++ b/app/assets/stylesheets/components/fonts.scss.erb
@@ -1,14 +1,10 @@
 @font-face {
-    font-family: "rawengulk_r";
-    src: url("<%= asset_path('fonts/rawengulk_r.otf') %>") format("opentype");
-    font-style: normal;
-    font-weight: 200;
+    font-family: "caviar_dreams_r";
+    src: url("<%= asset_path('fonts/caviar_dreams_r.ttf') %>") format("truetype");
 }
 @font-face {
-    font-family: "rawengulk_b";
-    src: url("<%= asset_path('fonts/rawengulk_b.otf') %>") format("opentype");
-    font-style: normal;
-    font-weight: 200;
+    font-family: "caviar_dreams_b";
+    src: url("<%= asset_path('fonts/caviar_dreams_b.ttf') %>") format("truetype");
 }
 @font-face {
     font-family: "playfair_display_r";
