--- a/app/views/shared/_story_show.html.erb
+++ b/app/views/shared/_story_show.html.erb
@@ -1,60 +1,90 @@
 <% show_pubic_links ||= false %>
-
-<% if @story.subheader.present? %>
-  <h2 class="story-subheader">
-    <%= @story.subheader %>
-  </h2>
-<% end %>
-
-<div class="story-author">
-  <%= t('.by') %>: <%= @story.author_info %>
+<div class="story-intro">
+  <div class="story-intro-bottom">
+    <div class="story-card">
+      <div class="story-title"><%= story.title %></div>
+      <div class="story-author"><%= t('shared.common.from') %><br /><span><%= story.author  %></div>
+    </div>
+    <div class="story-tools">
+      <div class="print"></div>
+      <div class="credit">Credit Blah blah</div>
+      <div class="caption">Lorem ipsum</div>
+      <div class="social">
+        <ul class="nav-social-list"><li class="facebook"><%= link_to image_tag('fb.svg'),
+                  "https://facebook.com",
+                  target: '_blank',
+                  title: t("shared.common.facebook") %></li><li class="twitter"><%= link_to image_tag('twitter.svg'),
+                  "https://twitter.com",
+                  target: '_blank',
+                  title: t('shared.common.twitter') %></li><li class="linkedin"><%= link_to image_tag('linkedin.svg'),
+                  "https://linkedin.com",
+                  target: '_blank',
+                  title: t('shared.common.linkedin') %></li></ul>
+        <div class="nav-social-toggle">
+          <%= image_tag('share.svg', class: 'share') %>
+          <%= image_tag('close.svg', class: 'close') %>
+        </div>
+      </div>
+    </div>
+    <div class="story-slideshow"></div>
+  </div>
 </div>
-
-<% if @story.published_at.present? %>
-  <div class="story-date">
-    <%= l @story.published_at %>
-  </div>
-<% end %>
-
-<% if @story.image_story.exists? %>
-  <div class="image-story">
-    <%= image_tag @story.image_story.url %>
-  </div>
-  <% if @story.image_caption.present? %>
-    <div class="image-caption">
-      <%= @story.image_caption %>
-    </div>
-  <% end %>
-  <% if @story.image_credit.present? %>
-    <div class="image-credit">
-      <%= t('.credit') %>: <%= @story.image_caption %>
-    </div>
-  <% end %>
-<% end %>
-
-<% if show_pubic_links == true %>
-  <div class="story-links">
-    <ul>
-      <li>
-        <a href="javascript:window.print()"><%= t('.print') %></a>
-      </li>
-      <li>
-        <%= link_to t('.previous'), story_show_path(@previous), title: @previous.title if @previous.present? %>
-      </li>
-      <li>
-        <%= link_to t('.next'), story_show_path(@next), title: @next.title if @next.present? %>
-      </li>
-    </ul>
-  </div>
-<% end %>
-
-<div class="story-content">
+<div class="story-text">
   <%= simple_format_no_tags(@story.content, {}, sanitize: false) %>
+  <% if @story.footnotes.present? %>
+    <h2><%= t('.footnotes') %></h2>
+    <div class="story-footnotes">
+      <%= simple_format_no_tags(@story.footnotes, {}, sanitize: false) %>
+    </div>
+  <% end %>
 </div>
 
-<% if @story.footnotes.present? %>
-  <h2><%= t('.footnotes') %></h2>
-  <div class="story-footnotes">
-    <%= simple_format_no_tags(@story.footnotes, {}, sanitize: false) %>
+<% if false %>
+  <% if @story.subheader.present? %>
+    <h2 class="story-subheader">
+      <%= @story.subheader %>
+    </h2>
+  <% end %>
+
+  <div class="story-author">
+    <%= t('.by') %>: <%= @story.author_info %>
   </div>
+
+  <% if @story.published_at.present? %>
+    <div class="story-date">
+      <%= l @story.published_at %>
+    </div>
+  <% end %>
+
+  <% if @story.image_story.exists? %>
+    <div class="image-story">
+      <%= image_tag @story.image_story.url %>
+    </div>
+    <% if @story.image_caption.present? %>
+      <div class="image-caption">
+        <%= @story.image_caption %>
+      </div>
+    <% end %>
+    <% if @story.image_credit.present? %>
+      <div class="image-credit">
+        <%= t('.credit') %>: <%= @story.image_caption %>
+      </div>
+    <% end %>
+  <% end %>
+
+  <% if show_pubic_links == true %>
+    <div class="story-links">
+      <ul>
+        <li>
+          <a href="javascript:window.print()"><%= t('.print') %></a>
+        </li>
+        <li>
+          <%= link_to t('.previous'), story_show_path(@previous), title: @previous.title if @previous.present? %>
+        </li>
+        <li>
+          <%= link_to t('.next'), story_show_path(@next), title: @next.title if @next.present? %>
+        </li>
+      </ul>
+    </div>
+  <% end %>
 <% end %>
