Story and about page

--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -2,10 +2,10 @@
   <%= link_to image_tag('forset.svg'),
               'https://forset.ge',
               target: '_blank',
-              title: t('shared.common.forset.slogan') %>
+              title: t('shared.common.forset.motto') %>
   <div class="separator"></div>
-  <%= link_to image_tag('eurasianet.svg'),
+  <%= link_to image_tag('eurasianet.png'),
               "#{I18n.locale == :en ? 'eurasianet.org' : 'http://russian.eurasianet.org/'}",
               target: '_blank',
-              title: t('shared.common.eurasianet.slogan'), class: 'last' %>
+              title: t('shared.common.eurasianet.motto'), class: 'last' %>
 </footer>
