--- a/app/views/root/about.html.erb
+++ b/app/views/root/about.html.erb
@@ -1,3 +1,37 @@
 <% page_title @about.title %>
+<% text = "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ultrices vulputate dolor, a dapibus orci hendrerit quis. Curabitur lobortis risus sapien, ullamcorper cursus felis imperdiet quis. Nunc non feugiat libero. Quisque sed odio id eros dapibus consectetur. Aliquam erat volutpat. Ut a iaculis ipsum. Donec et vehicula libero. Vestibulum lacinia mi at nulla efficitur porta. Etiam sagittis arcu a mi fringilla efficitur. Phasellus rutrum sollicitudin tellus, eget feugiat enim pellentesque ac. Quisque non augue dolor. Sed sed ornare nunc, vel eleifend arcu.</p>
 
-<%= simple_format_no_tags @about.content, {}, sanitize: false %>
+<p>Nunc id orci non sem ultrices commodo vitae eget nibh. Integer libero enim, tincidunt ac mauris quis, posuere suscipit leo. Duis a quam nec mauris bibendum dignissim a nec est. Suspendisse bibendum porttitor felis, sit amet pellentesque purus molestie non. Sed risus velit, auctor id dolor in, elementum consequat odio. Nullam luctus nisl non vulputate molestie. Proin elementum diam ut eleifend cursus. Nam tincidunt massa non justo consequat commodo. Vestibulum ut ornare dui, eu malesuada est. Praesent tempor, turpis ut efficitur interdum, ipsum urna vulputate mauris, eu pretium metus dolor vitae augue. In justo eros, semper a lacinia a, consectetur sed neque. Quisque nulla ligula, mattis et enim eget, dignissim dictum elit. In hac habitasse platea dictumst. Etiam vitae porttitor tellus.</p>
+
+<p>Mauris tincidunt ante pharetra ipsum suscipit mollis et quis tortor. Sed diam nulla, venenatis nec malesuada in, varius a odio. Quisque at tellus diam. Nulla facilisi. Nulla commodo semper urna non fringilla. Morbi congue augue a libero sollicitudin euismod. Phasellus vel malesuada erat, eu egestas dolor. Duis dignissim augue in leo porta porta et vel massa. Maecenas imperdiet fringilla nunc. Pellentesque id mi orci. Curabitur ante libero, lacinia vitae pellentesque maximus, congue in erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+
+<p>Aliquam volutpat, purus ac hendrerit placerat, leo tellus bibendum nisi, in gravida ipsum tellus cursus magna. Proin orci quam, lobortis a sollicitudin eget, mollis in quam. Pellentesque fermentum arcu eu gravida tincidunt. In eget tempor libero. Mauris sit amet dui ut massa faucibus vestibulum vitae id turpis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin et varius turpis, vel vulputate urna. Nunc maximus turpis ac metus elementum, vel tempor sapien blandit. Morbi fringilla justo a commodo cursus. Suspendisse ut pulvinar nisl. Pellentesque eleifend semper nisl, at elementum nulla. Etiam cursus interdum hendrerit. Praesent mi dolor, sodales eu efficitur vitae, egestas non nulla. Duis turpis arcu, lacinia sed lorem quis, lacinia maximus dui. Nulla sit amet varius nunc, ut cursus risus.</p>
+
+<p>Duis et nibh eget augue sagittis varius at nec nisi. In volutpat mauris et blandit rhoncus. Quisque nibh est, bibendum in viverra vitae, maximus eget justo. Nullam at faucibus augue, ac vestibulum elit. Vestibulum non enim iaculis, fringilla est non, congue quam. In aliquet nisi ac lectus malesuada, sed tincidunt mi rutrum. Donec id bibendum ligula, nec bibendum nibh. Quisque venenatis sapien arcu, at luctus risus malesuada ac. Donec at felis interdum, gravida tortor non, fermentum felis. Etiam gravida nisi odio. Vestibulum vestibulum dolor vitae odio maximus sollicitudin. Mauris ac molestie sem. Nam erat risus, dictum ut auctor porttitor, congue sit amet nulla. Pellentesque faucibus, lacus vitae placerat mollis, purus sem pulvinar neque, sed sagittis purus orci ac risus. Maecenas malesuada gravida congue.</p>
+
+<p>Nam ut odio a lorem sagittis faucibus quis eget risus. Sed pretium porta mauris. Vestibulum scelerisque dictum orci at dapibus. Aliquam erat volutpat. Sed sodales non felis ut pharetra. Nullam ac ullamcorper risus, et suscipit turpis. Aliquam elementum, eros eget varius volutpat, tellus erat vulputate urna, et hendrerit purus eros et ipsum. Praesent in nunc in sem tempor tempor non eu eros.</p>
+
+<p>Fusce ex dolor, ornare vel sem sed, hendrerit porta massa. Sed a arcu est. Etiam vestibulum tempor erat sed iaculis. Nam auctor lectus quis tellus sollicitudin, a faucibus quam porta. Sed rutrum ipsum nec semper commodo. Morbi vestibulum neque sed finibus porta. Nullam id fermentum arcu. Ut sit amet justo lacus. Aliquam erat volutpat. In vel risus ut orci hendrerit tincidunt. Etiam in convallis orci.</p>
+
+<p>Morbi commodo nunc at risus suscipit, sed imperdiet justo fermentum. Duis non sem non dolor bibendum varius sit amet id justo. Integer in dapibus ligula. Pellentesque laoreet dictum ligula sed volutpat. Quisque tincidunt iaculis nisl at fringilla. Donec sit amet interdum nisl. Praesent a molestie purus. Donec varius, purus scelerisque aliquam varius, massa lectus pharetra arcu, a tempor arcu nunc at magna.</p>
+
+<p>Praesent eleifend non mauris ut posuere. Quisque eleifend, metus ut gravida pharetra, justo ligula iaculis dolor, a sollicitudin est elit sit amet diam. Nullam dui risus, blandit gravida molestie vitae, placerat ac felis. Nunc sagittis at erat at gravida. Aenean blandit leo massa. Suspendisse varius, ante non luctus tincidunt, nibh sapien tincidunt purus, in luctus ante odio vitae nibh. Nunc congue iaculis consectetur. Nullam nec blandit ante, in imperdiet nunc.</p>
+
+<p>Sed eu eros libero. Cras aliquet leo quis dolor luctus, eu maximus nisi tristique. Proin rutrum, velit vel tincidunt vehicula, augue augue pulvinar enim, vel vehicula ligula tellus eu eros. Donec vel eros eget nibh condimentum rhoncus non id quam. Vivamus volutpat justo ut nisl fermentum, eu ultricies erat ultricies. Donec eu ullamcorper lorem. Vestibulum et condimentum metus, non sollicitudin est.</p>" %>
+<div class="aside">
+  <div class="col">
+    <div class="about">ABOUT <br />THE PROJECT</div>
+    <div><%= image_tag('about/1.jpg') %></div>
+    <div><%= image_tag('about/2.jpg') %></div>
+  </div>
+  <div class="col">
+    <div><%= image_tag('about/3.jpg') %></div>
+    <div><%= image_tag('about/4.jpg') %></div>
+    <div><%= image_tag('about/5.jpg') %></div>
+  </div>
+</div>
+<div class="content">
+  <%= text.html_safe %>
+  <%#= simple_format_no_tags @about.content, {}, sanitize: false %>
+</div>
+
