--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -8,7 +8,7 @@
     <%= yield %>
     <hr>
     <p>
-      <%=t 'shared.common.forset.slogan' %>
+      <%=t 'shared.common.forset.motto' %>
     </p>
   </body>
 </html>
