--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -565,12 +565,7 @@ footer {
       flex: 1;
       order: 2;
       .about {
-        font: 22px caviar_dreams_b;
-        color: #fff;
-        width: 100%;
-        background-color: #4571b1;
-
-        padding: 85px 0 85px 30px;
+        display: none;
       }
       .col {
         margin-right: 8px;
@@ -604,6 +599,14 @@ footer {
         display: flex;
         flex-direction: row;
         order: 1;
+        .about {
+          display: block;
+          font: 22px caviar_dreams_b;
+          color: #fff;
+          width: 100%;
+          background-color: #4571b1;
+          padding: 85px 0 85px 30px;
+        }
       }
       .content {
         order: 2;
